project links causing whitespace on right side of page, found the bug and fixed

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 html {
     font-size: 16px;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
@@ -14,9 +16,6 @@ body {
     color: white;
     line-height: 1.4;
     letter-spacing: .1rem;
-}
-
-@media only screen and (max-width: 480px) {
 }
 
 h1 { 
@@ -107,13 +106,13 @@ nav ul {
 
 nav {
     width: 100%;
-    float: none;
+    float: right;
 }
 
 nav li {
     font-weight: 800;
-    font-size: 2rem;
-    margin: 40px 5% 0 0;
+    font-size: 1.8rem;
+    margin: 40px 5% 0;
     font-family: 'Luxurious Roman', Helvetica, sans-serif;
    
 }
@@ -292,18 +291,22 @@ nav li {
         width: 100%;
     }
 
+    #project1-text {
+        text-align: center;
+    }
+
     #p-1-link {
         grid-area: 2 / 1 / 2 / 1;
-        position: relative;
-        left: 25%;
-        top: 0px;
+        position: static;
+        display: inline;
+        margin: 0 1rem 0 0;
     }
     
     #p-2-link {
         grid-area: 2 / 1 / 2 / 1;
-        position: relative;
-        left: 50%;
-        top: 0px;
+        position: static;
+        display: inline;
+        margin: 0 0 0 1rem;
     }
 
     #h-1 {
